2008-09-25  Jonathan Pryor  <jpryor@novell.com>

	* Check.cs: Add Check.Destination() method.
	* Stream.cs: Add .WriteTo() method, which copies data between streams.

2008-09-25  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs (Transpose): Don't insert default(TSource) when a row
	  doesn't have enough elements for the transposed row, just skip it.
	  This is Haskell's behavior.

2008-09-23  Jonathan Pryor  <jpryor@novell.com>

	* JaggedArray.cs, RectangularArray.cs: Added; extension methods for
	  jagged and rectangular arrays.

2008-09-22  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: Change the return type of .ToTuple() to IList<object>;
	  .SplitAt() should throw if firstLength is negative; rename .Span()'s
	  Func<TSource,bool> parameter to `predicate`.

2008-09-22  Jonathan Pryor  <jpryor@novell.com>

	* Either.cs: Added; static `Either` utility class.

2008-09-20  Jonathan Pryor  <jpryor@novell.com>

	* Eithers.cs: Added; type safe "tagged" union types.

2008-09-18  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: Rename .SelectFromEach() type parameters for
	  consistency: s/TFirstSource/T1/g, s/TSecondSource/T2/g,
	  s/TThirdSource/T3/g, s/TFourthSource/T4/g.

2008-09-18  Jonathan Pryor  <jpryor@novell.com>

	* NaturalStringComparer.cs: Fix typo.

2008-09-17  Jonathan Pryor  <jpryor@novell.com>

	* Maybe.cs: 
	  - TryParse() should use .CanConvertFrom() in addition to catching the
	    exception, as exceptions are slow.
	  - Rename MaybeRocks.SelectMany<TSource,TResult>(...) to
	    MaybeRocks.Select<TSource,TResult>(...), as this more closely
	    matches the semantics and the documented pattern at:
	    http://msdn.microsoft.com/en-us/library/bb308966.aspx
	  - .Select() and .SelectMany() should call .ToMaybe() on their return
	    values, not .Just(), as returning Maybe<T>.Nothing is already part
	    of their contract, so this is more sensible.

2008-09-16  Jonathan Pryor  <jpryor@novell.com>
