@@ -1,3 +1,7 @@
+2008-09-26  Jonathan Pryor  <jpryor@novell.com>
+
+	* TextReaderTest.cs: Add new tests for .Words() lexer capabilities.
+
 2008-09-25  Jonathan Pryor  <jpryor@novell.com>
 
 	* StreamTest.cs: Add tests for .WriteTo().
